fixed issue where footer would hide content that was too long

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body {
 
 .content {
     margin: 0 8em 0 8em;
+    padding-bottom: 2em;
 }
 
 .about-me {
@@ -98,6 +99,7 @@ body {
     position: absolute;
     bottom: 0;
     width: 100%;
+    height: 2em;
 }
 
 /* Extra Small + Small screens */
